--- a/nieruchomosci.html
+++ b/nieruchomosci.html
@@ -12,8 +12,13 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Kancelaria Adwokacka Adwokat Ilona Grembowska">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="preload" as="style" href="/assets/css/bootstrap-4.3.1.min.css">
+    <link rel="preload" as="style" href="/assets/css/style-20190619.css">
+
+    <link rel="preload" href="/assets/js/jquery-3.3.1.slim.min.js" as="script">
+    <link rel="preload" href="/assets/js/bootstrap-4.3.1.min.js" as="script">
+
+    <link rel="stylesheet" href="/assets/css/bootstrap-4.3.1.min.css">
     <link rel="stylesheet" href="/assets/css/style-20190619.css">
 
     <link rel="canonical" href="https://www.adwokat-grembowska.pl/nieruchomosci"> 
@@ -89,14 +94,16 @@ w sprawach dotyczących nieruchomości.</p>
 
     </div>
     <div class="col-md-4 position-relative">
+         
         <picture>
             <source srcset="/assets/img/nieruchomosci.webp" type="image/webp">
             <img id="content-background" src="/assets/img/nieruchomosci.png">
         </picture>  
+        
         <div>
             <h1>Kontakt</h1>
             <p>Telefon: <strong><a href="tel:+48504590066">(+48) 504 59 00 66</a></strong></p>
-            <p>Email: <strong><a href="mailto:kancelaria@adwokat-grebowska.pl">kancelaria@adwokat-grebowska.pl</a></strong></p>
+            <p>Email: <strong><a href="mailto:kancelaria@adwokat-grembowska.pl">kancelaria@adwokat-grembowska.pl</a></strong></p>
         </div>
         <div>
             <h1>Obszar praktyki</h1>
@@ -129,10 +136,7 @@ w sprawach dotyczących nieruchomości.</p>
             </div>
         </footer>
     </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="/assets/js/jquery-3.3.1.slim.min.js" defer></script>
+    <script src="/assets/js/bootstrap-4.3.1.min.js" defer></script>
   </body>
 </html>
