zmiana nazwiska strona glowna

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="kancelaria-adwokacka">
     <meta property="og:url" content="https://www.adwokat-grembowska.pl">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Kancelaria Adwokacka Adwokat Ilona Grembowska">
+    <meta property="og:site_name" content="Kancelaria Adwokacka Adwokat Ilona Grembowska-Dowgiałło">
 
     <link rel="preload" as="style" href="/assets/css/bootstrap-4.3.1.min.css">
     <link rel="preload" as="style" href="/assets/css/style-20190619.css">
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="/assets/css/style-20190619.css">
 
     <link rel="canonical" href="https://www.adwokat-grembowska.pl/"> 
-    <title>O kancelarii | Kancelaria Adwokacka Adwokat Ilona Grembowska</title>
+    <title>O kancelarii | Kancelaria Adwokacka Adwokat Ilona Grembowska-Dowgiałło</title>
   </head>
   <body>
 
@@ -32,7 +32,7 @@
             <a class="navbar-brand" href="/">
                 <picture>
                     <source srcset="/assets/img/adwokatura.webp" type="image/webp">
-                    <img src="/assets/img/adwokatura.png" alt="Adwokat Ilona Grębowska">
+                    <img src="/assets/img/adwokatura.png" alt="Adwokat Ilona Grembowska-Dowgiałło">
                 </picture>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,7 +81,7 @@
 <div class="row py-3">
     <div class="col-md-8 text-justify">
         <h1 id="o-kancelarii">O kancelarii</h1>
-<p>Kancelaria Adwokacka Adwokat Ilona Grembowska świadczy kompleksową pomoc prawną osobom fizycznym oraz podmiotom gospodarczym w każdej dziedzinie prawa, <strong>zwłaszcza w zakresie prawa rodzinnego, upadłościowego oraz spadkowego</strong>.</p>
+<p>Kancelaria Adwokacka Adwokat Ilona Grembowska-Dowgiałło świadczy kompleksową pomoc prawną osobom fizycznym oraz podmiotom gospodarczym w każdej dziedzinie prawa, <strong>zwłaszcza w zakresie prawa rodzinnego, upadłościowego oraz spadkowego</strong>.</p>
 
 <p>Działamy z poszanowaniem dla tradycji polskiej adwokatury, przestrzegając zasad etyki zawodowej
 i dobrych obyczajów.</p>
@@ -97,7 +97,7 @@ w realizowaniu zleceń. Stale podnosimy nasze kwalifikacje merytoryczne, a takż
     <img src="/assets/img/ilona_grebowska_full.png" alt="Adwokat Ilona Grębowska Zdjęcie" class="float-left mr-3" />
 </picture>
 <p class="text-left">
-Kancelarię prowadzi <strong>adw.&nbsp;Ilona Grembowska</strong>, członek Izby Adwokackiej w Warszawie. Absolwentka Wydziału Prawa, Administracji i Ekonomii Uniwersytetu Wrocławskiego, Podyplomowych Studiów Prawa Pracy Uniwersytetu Warszawskiego oraz aplikacji adwokackiej odbytej w Okręgowej Radzie Adwokackiej w Warszawie.
+Kancelarię prowadzi <strong>adw.&nbsp;Ilona Grembowska-Dowgiałło</strong>, członek Izby Adwokackiej w Warszawie. Absolwentka Wydziału Prawa, Administracji i Ekonomii Uniwersytetu Wrocławskiego, Podyplomowych Studiów Prawa Pracy Uniwersytetu Warszawskiego oraz aplikacji adwokackiej odbytej w Okręgowej Radzie Adwokackiej w Warszawie.
 </p>
 <p class="text-left">
 <b>Specjalizuje się w prawie rodzinnym, upadłościowym oraz spadkowym. Szczególne miejsce w jej aktywności zawodowej zajmują sprawy o rozwód i separację, o alimenty, władzę rodzicielską i kontakty z małoletnimi dziećmi. Prowadzi postępowania w sprawach majątkowych</b> (podział majątku wspólnego małżeńskiego, zniesienie współwłasności). 
