--- a/kontakt.html
+++ b/kontakt.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="kancelaria-adwokacka">
     <meta property="og:url" content="https://www.adwokat-grembowska.pl">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Kancelaria Adwokacka Adwokat Ilona Grembowska">
+    <meta property="og:site_name" content="Kancelaria Adwokacka Adwokat Ilona Grembowska-Dowgiałło">
 
     <link rel="preload" as="style" href="/assets/css/bootstrap-4.3.1.min.css">
     <link rel="preload" as="style" href="/assets/css/style-20190619.css">
@@ -32,7 +32,7 @@
             <a class="navbar-brand" href="/">
                 <picture>
                     <source srcset="/assets/img/adwokatura.webp" type="image/webp">
-                    <img src="/assets/img/adwokatura.png" alt="Adwokat Ilona Grębowska">
+                    <img src="/assets/img/adwokatura.png" alt="Adwokat Ilona Grembowska-Dowgiałło">
                 </picture>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,7 +71,7 @@
     <h1>Kancelaria Adwokacka</h1>
     <div class="row">
     <div class="col-sm-6">
-<address style="white-space: pre-line">Adwokat Ilona Grembowska
+<address style="white-space: pre-line">Adwokat Ilona Grembowska-Dowgiałło
 ul. Smulikowskiego 12/2
 00-389 Warszawa
 
