--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ w realizowaniu zleceń. Stale podnosimy nasze kwalifikacje merytoryczne, a takż
 <h2>Adwokat</h2>
 <picture>
     <source srcset="/assets/img/ilona_grebowska_full.webp" type="image/webp" />
-    <img src="/assets/img/ilona_grebowska_full.png" alt="Adwokat Ilona Grębowska Zdjęcie" class="float-left mr-3" />
+    <img src="/assets/img/ilona_grebowska_full.png" alt="Adwokat Ilona Grembowska-Dowgiałło Zdjęcie" class="float-left mr-3" />
 </picture>
 <p class="text-left">
 Kancelarię prowadzi <strong>adw.&nbsp;Ilona Grembowska-Dowgiałło</strong>, członek Izby Adwokackiej w Warszawie. Absolwentka Wydziału Prawa, Administracji i Ekonomii Uniwersytetu Wrocławskiego, Podyplomowych Studiów Prawa Pracy Uniwersytetu Warszawskiego oraz aplikacji adwokackiej odbytej w Okręgowej Radzie Adwokackiej w Warszawie.
