--- a/kontakt.html
+++ b/kontakt.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="/assets/css/style-20190619.css">
 
     <link rel="canonical" href="https://www.adwokat-grembowska.pl/kontakt"> 
-    <title>Kontakt | Kancelaria Adwokacka Adwokat Ilona Grembowska</title>
+    <title>Kontakt | Kancelaria Adwokacka Adwokat Ilona Grembowska-Dowgiałło</title>
   </head>
   <body>
 
