--- a/prawo-rodzinne.html
+++ b/prawo-rodzinne.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="kancelaria-adwokacka">
     <meta property="og:url" content="https://www.adwokat-grembowska.pl">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Kancelaria Adwokacka Adwokat Ilona Grembowska">
+    <meta property="og:site_name" content="Kancelaria Adwokacka Adwokat Ilona Grembowska-Dowgiałło">
 
     <link rel="preload" as="style" href="/assets/css/bootstrap-4.3.1.min.css">
     <link rel="preload" as="style" href="/assets/css/style-20190619.css">
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="/assets/css/style-20190619.css">
 
     <link rel="canonical" href="https://www.adwokat-grembowska.pl/prawo-rodzinne"> 
-    <title>Prawo rodzinne | Kancelaria Adwokacka Adwokat Ilona Grembowska</title>
+    <title>Prawo rodzinne | Kancelaria Adwokacka Adwokat Ilona Grembowska-Dowgiałło</title>
   </head>
   <body>
 
@@ -32,7 +32,7 @@
             <a class="navbar-brand" href="/">
                 <picture>
                     <source srcset="/assets/img/adwokatura.webp" type="image/webp">
-                    <img src="/assets/img/adwokatura.png" alt="Adwokat Ilona Grębowska">
+                    <img src="/assets/img/adwokatura.png" alt="Adwokat Ilona Grembowska-Dowgiałło">
                 </picture>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
